--- a/animal-chipping-front/src/app/animal-type/animal-type.component.html
+++ b/animal-chipping-front/src/app/animal-type/animal-type.component.html
@@ -4,7 +4,7 @@
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                     aria-expanded="false" aria-controls="collapseOne" (click)="setActiveTab('FIND')">
-                    Find an Animal type
+                    Найти тип животного
                 </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -13,9 +13,9 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="typeId" formControlName="typeId"
                                 placeholder="Enter animal type ID">
-                            <label for="typeId">Animal type ID</label>
+                            <label for="typeId">ID типа животного</label>
                         </div>
-                        <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Отправить</button>
                     </form>
                 </div>
             </div>
@@ -24,7 +24,7 @@
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" (click)="setActiveTab('ADD')">
-                    Add an Animal type
+                    Добавить тип животного
                 </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -33,9 +33,9 @@
                         <div class="form-floating my-3">
                             <input type="text" class="form-control" id="type" formControlName="type"
                                 placeholder="Enter animal type">
-                            <label for="type">Type</label>
+                            <label for="type">Тип</label>
                         </div>
-                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Отправить</button>
                     </form>
                 </div>
             </div>
@@ -44,7 +44,7 @@
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" (click)="setActiveTab('UPDATE')">
-                    Update an Animal type
+                    Обновить тип животного
                 </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -53,14 +53,14 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="typeId" formControlName="typeId"
                                 placeholder="Enter animal type ID">
-                            <label for="typeId">Animal type ID</label>
+                            <label for="typeId">ID типа животного</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="text" class="form-control" id="type" formControlName="type"
                                 placeholder="Enter animal type">
-                            <label for="type">Type</label>
+                            <label for="type">Тип</label>
                         </div>
-                        <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Отправить</button>
                     </form>
                 </div>
             </div>
@@ -69,7 +69,7 @@
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour" (click)="setActiveTab('DELETE')">
-                    Delete an Animal type
+                    Удалить тип животного
                 </button>
             </h2>
             <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -78,9 +78,9 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="typeId" formControlName="typeId"
                                 placeholder="Enter animal type ID">
-                            <label for="typeId">Animal type ID</label>
+                            <label for="typeId">ID типа животного</label>
                         </div>
-                        <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Отправить</button>
                     </form>
                 </div>
             </div>
