--- a/animal-chipping-front/src/app/location/location.component.html
+++ b/animal-chipping-front/src/app/location/location.component.html
@@ -4,7 +4,7 @@
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                     aria-expanded="false" aria-controls="collapseOne" (click)="setActiveTab('FIND')">
-                    Find a Location
+                    Найти локацию
                 </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -13,7 +13,7 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="locationId" formControlName="locationId"
                                 placeholder="Enter Location ID">
-                            <label for="locationId">Location ID</label>
+                            <label for="locationId">ID локации</label>
                         </div>
                         <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -25,7 +25,7 @@
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"
                     (click)="setActiveTab('ADD')">
-                    Add a Location
+                    Добавить локацию
                 </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -34,12 +34,12 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="latitude" formControlName="latitude"
                                 placeholder="Enter Location latitude">
-                            <label for="latitude">Latitude</label>
+                            <label for="latitude">Широта</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="longitude" formControlName="longitude"
                                 placeholder="Enter Location longitude">
-                            <label for="longitude">Longitude</label>
+                            <label for="longitude">Долгота</label>
                         </div>
                         <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -51,7 +51,7 @@
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"
                     (click)="setActiveTab('UPDATE')">
-                    Update a Location
+                    Обновить данные локации
                 </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -60,17 +60,17 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="locationId" formControlName="locationId"
                                 placeholder="Enter Location ID">
-                            <label for="locationId">Location ID</label>
+                            <label for="locationId">ID локации</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="latitude" formControlName="latitude"
                                 placeholder="Enter Location latitude">
-                            <label for="latitude">Latitude</label>
+                            <label for="latitude">Широта</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="longitude" formControlName="longitude"
                                 placeholder="Enter Location longitude">
-                            <label for="longitude">Longitude</label>
+                            <label for="longitude">Долгота</label>
                         </div>
                         <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -82,7 +82,7 @@
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour"
                     (click)="setActiveTab('DELETE')">
-                    Delete a Location
+                    Удалить локацию
                 </button>
             </h2>
             <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -91,7 +91,7 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="locationId" formControlName="locationId"
                                 placeholder="Enter Location ID">
-                            <label for="locationId">Location ID</label>
+                            <label for="locationId">ID локации</label>
                         </div>
                         <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
