--- a/animal-chipping-front/src/app/visited-location/visited-location.component.html
+++ b/animal-chipping-front/src/app/visited-location/visited-location.component.html
@@ -4,7 +4,7 @@
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                     aria-expanded="false" aria-controls="collapseOne" (click)="setActiveTab('ADD')">
-                    Add a Visited location
+                    Добавить посещенную локацию
                 </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -13,14 +13,14 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="animalId" formControlName="animalId"
                                 placeholder="Enter Animal ID">
-                            <label for="animalId">Animal ID</label>
+                            <label for="animalId">ID животного</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="locationId" formControlName="locationId"
                                 placeholder="Enter Visited location ID">
-                            <label for="locationId">Visited location ID</label>
+                            <label for="locationId">ID локации</label>
                         </div>
-                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Отправить</button>
                     </form>
                 </div>
             </div>
@@ -29,7 +29,7 @@
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" (click)="setActiveTab('UPDATE')">
-                    Update a Visited location
+                    Обновить посещенную локацию
                 </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -38,19 +38,19 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="animalId" formControlName="animalId"
                                 placeholder="Enter Animal ID">
-                            <label for="animalId">Animal ID</label>
+                            <label for="animalId">ID животного</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="visitedLocationId"
                                 formControlName="visitedLocationId" placeholder="Enter Visited location ID">
-                            <label for="visitedLocationId">Visited Location ID</label>
+                            <label for="visitedLocationId">ID посещенной локации</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="locationId" formControlName="locationId"
                                 placeholder="Enter Location ID">
-                            <label for="locationId">Location ID</label>
+                            <label for="locationId">ID локации</label>
                         </div>
-                        <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Отправить</button>
                     </form>
                 </div>
             </div>
@@ -59,7 +59,7 @@
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" (click)="setActiveTab('DELETE')">
-                    Delete a Visited location
+                    Удалить посещенную локацию
                 </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -68,9 +68,9 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="visitedLocationId"
                                 formControlName="visitedLocationId" placeholder="Enter Visited location ID">
-                            <label for="visitedLocationId">Visited location ID</label>
+                            <label for="visitedLocationId">ID посещенной локации</label>
                         </div>
-                        <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Отправить</button>
                     </form>
                 </div>
             </div>
