refactor: translate animal-type-view component

--- a/animal-chipping-front/src/app/animal-type-view/animal-type-view.component.html
+++ b/animal-chipping-front/src/app/animal-type-view/animal-type-view.component.html
@@ -1,7 +1,7 @@
 <table class="table table-borderless" *ngIf="animalType">
     <thead>
         <tr>
-            <th colspan="2" scope="col">Animal type</th>
+            <th colspan="2" scope="col">Тип животного</th>
         </tr>
     </thead>
     <tbody>
@@ -10,12 +10,12 @@
             <td>{{animalType.id}}</td>
         </tr>
         <tr>
-            <td scope="row">latitude</td>
+            <td scope="row">Тип</td>
             <td>{{animalType.type}}</td>
         </tr>
     </tbody>
 </table>
 <div class="alert alert-success" role="alert" *ngIf="isAnimalTypeDeleted">
-    Animal type has been deleted!
+    Тип животного успешно удален!
 </div>
 <app-json-view [object]="animalType" *ngIf="animalType"></app-json-view>
