--- a/animal-chipping-front/src/app/app.component.html
+++ b/animal-chipping-front/src/app/app.component.html
@@ -8,19 +8,19 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/account">Account</a>
+        <a class="nav-link" href="/account">Аккаунт</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/animal">Animal</a>
+        <a class="nav-link" href="/animal">Животное</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="animal-type">Animal type</a>
+        <a class="nav-link" href="animal-type">Тип животного</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/location">Location</a>
+        <a class="nav-link" href="/location">Локация</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/visited-location">Visited location</a>
+        <a class="nav-link" href="/visited-location">Посещенная локация</a>
       </li>
     </ul>
   </div>
