fix: position of footer & height of container

--- a/animal-chipping-front/src/app/app.component.html
+++ b/animal-chipping-front/src/app/app.component.html
@@ -27,11 +27,11 @@
 </nav>
 
 <!-- Container -->
-<div class="container h-100 d-flex flex-column justify-content-center">
+<div class="container h-100 d-flex flex-column justify-content-center flex-fill">
   <router-outlet></router-outlet>
 </div>
 
 <!-- Footer -->
-<footer class="bg-dark text-white text-center p-3 mt-5">
+<footer class="bg-dark position-sticky text-white text-center p-3 mt-5">
   <span>Copyright ©2023 <a href="/home">Animal Chipping</a></span>
 </footer>
