feat: add section to the home component

--- a/animal-chipping-org/src/app/app.component.html
+++ b/animal-chipping-org/src/app/app.component.html
@@ -18,8 +18,8 @@
 </nav>
 
 <!-- Container -->
-<div class="container h-100 d-flex flex-column justify-content-center flex-fill">
-  <router-outlet></router-outlet>
+<div class="container h-100 d-flex flex-column flex-fill">
+  <router-outlet class="app-root"></router-outlet>
 </div>
 
 <!-- Footer -->
