--- a/animal-chipping-org/src/app/home/home.component.html
+++ b/animal-chipping-org/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<h1>home works!</h1>
+<section class="app-root bg-image d-flex flex-column justify-content-center align-items-center">
+  <div class="container d-flex flex-column justify-content-center align-items-center">
+    <div class="col-md-6 mb-5 text-center">
+      <h2 class="violet">Защитите своего пушистого друга - чипируйте его сегодня!</h2>
+    </div>
+    <div class="position-absolute end-15 bottom-0 m-5">
+      <a href="/animal-register" class="btn btn-primary btn-lg btn-block violet-bg">Чипировать</a>
+    </div>
+  </div>
+</section>
