--- a/animal-chipping-org/src/app/app.component.html
+++ b/animal-chipping-org/src/app/app.component.html
@@ -8,10 +8,10 @@
   <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/account">Авторизация</a>
+        <a class="nav-link" href="/registration">Авторизация</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/animal">Регистрация животного</a>
+        <a class="nav-link" href="/animal-registration">Регистрация животного</a>
       </li>
     </ul>
   </div>
