--- a/animal-chipping-org/src/app/registration/registration.component.html
+++ b/animal-chipping-org/src/app/registration/registration.component.html
@@ -7,7 +7,8 @@
             <label for="firstName">Имя</label>
         </div>
         <div class="form-floating my-3">
-            <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="Enter Last Name">
+            <input type="text" class="form-control" id="lastName" formControlName="lastName"
+                placeholder="Enter Last Name">
             <label for="lastName">Фамилия</label>
         </div>
         <div class="form-floating my-3">
@@ -19,6 +20,10 @@
                 placeholder="Enter Password">
             <label for="password">Пароль</label>
         </div>
-        <button [disabled]="registerForm.invalid" type="submit" class="btn btn-primary mt-3 violet-bg">Зарегестрироваться</button>
+        <button [disabled]="registerForm.invalid" type="submit"
+            class="btn btn-primary mt-3 violet-bg">Зарегестрироваться</button>
     </form>
+    <div *ngIf="registeredAccount" class="alert alert-success mt-5" role="alert">
+        Регистрация прошла успешно. Ваш ID = {{registeredAccount.id}}
+    </div>
 </div>
