fix: background image in the home-component

--- a/animal-chipping-org/src/app/home/home.component.css
+++ b/animal-chipping-org/src/app/home/home.component.css
@@ -4,6 +4,7 @@
     background-position: 0%;
     position: relative;
     background-position-y: bottom;
+    background-repeat: no-repeat;
 }
 .end-15 {
     right: 15%!important;
