feat: add additional fields to the registration form

--- a/animal-chipping-org/src/app/registration/registration.component.html
+++ b/animal-chipping-org/src/app/registration/registration.component.html
@@ -16,6 +16,26 @@
             <label for="email">Email</label>
         </div>
         <div class="form-floating my-3">
+            <input type="tel" class="form-control" id="email" placeholder="Enter Email">
+            <label for="email">Номер телефона</label>
+        </div>
+        <div class="form-floating my-3">
+            <input type="text" class="form-control" id="email" placeholder="Enter Email">
+            <label for="email">Фактический адрес</label>
+        </div>
+        <div class="form-floating my-3">
+            <input type="text" class="form-control" id="email" placeholder="Enter Email">
+            <label for="email">Адрес прописки</label>
+        </div>
+        <div class="form-floating my-3">
+            <input type="number" class="form-control" id="email" placeholder="Enter Email">
+            <label for="email">Серия паспорта</label>
+        </div>
+        <div class="form-floating my-3">
+            <input type="number" class="form-control" id="email" placeholder="Enter Email">
+            <label for="email">Номер паспорта</label>
+        </div>
+        <div class="form-floating my-3">
             <input type="password" class="form-control" id="password" formControlName="password"
                 placeholder="Enter Password">
             <label for="password">Пароль</label>
