--- a/animal-chipping-org/src/app/registration/registration.component.html
+++ b/animal-chipping-org/src/app/registration/registration.component.html
@@ -16,24 +16,24 @@
             <label for="email">Email</label>
         </div>
         <div class="form-floating my-3">
-            <input type="tel" class="form-control" id="email" placeholder="Enter Email">
-            <label for="email">Номер телефона</label>
+            <input type="tel" class="form-control" id="phone" placeholder="Enter phone">
+            <label for="phone">Номер телефона</label>
         </div>
         <div class="form-floating my-3">
-            <input type="text" class="form-control" id="email" placeholder="Enter Email">
-            <label for="email">Фактический адрес</label>
+            <input type="text" class="form-control" id="address" placeholder="Enter address">
+            <label for="address">Фактический адрес</label>
         </div>
         <div class="form-floating my-3">
-            <input type="text" class="form-control" id="email" placeholder="Enter Email">
-            <label for="email">Адрес прописки</label>
+            <input type="text" class="form-control" id="address" placeholder="Enter address">
+            <label for="address">Адрес прописки</label>
         </div>
         <div class="form-floating my-3">
-            <input type="number" class="form-control" id="email" placeholder="Enter Email">
-            <label for="email">Серия паспорта</label>
+            <input type="number" class="form-control" id="passport" placeholder="Enter Email">
+            <label for="passport">Серия паспорта</label>
         </div>
         <div class="form-floating my-3">
-            <input type="number" class="form-control" id="email" placeholder="Enter Email">
-            <label for="email">Номер паспорта</label>
+            <input type="number" class="form-control" id="passport" placeholder="Enter Email">
+            <label for="passport">Номер паспорта</label>
         </div>
         <div class="form-floating my-3">
             <input type="password" class="form-control" id="password" formControlName="password"
@@ -44,6 +44,6 @@
             class="btn btn-primary mt-3 violet-bg">Зарегестрироваться</button>
     </form>
     <div *ngIf="registeredAccount" class="alert alert-success mt-5" role="alert">
-        Регистрация прошла успешно. Ваш ID = {{registeredAccount.id}}
+        Регистрация прошла успешно. Данные для авторизации были отправлены на почту: {{registeredAccount.email}}
     </div>
 </div>
