--- a/animal-chipping-org/src/app/animal-registration/animal-registration.component.html
+++ b/animal-chipping-org/src/app/animal-registration/animal-registration.component.html
@@ -2,20 +2,32 @@
     <h2 class="mb-5">Регистрация питомца</h2>
     <form [formGroup]="registerAnimalForm" (ngSubmit)="registerAnimal()">
         <div class="form-floating my-3">
-            <input type="text" class="form-control" id="firstName" placeholder="">
+            <input type="text" class="form-control" id="firstName" placeholder="s">
             <label for="firstName">Имя</label>
         </div>
         <div class="form-floating my-3">
-            <input type="text" class="form-control" id="email" formControlName="weight" placeholder="">
-            <label for="email">Вес</label>
+            <input type="number" class="form-control" id="weight" formControlName="weight" placeholder="s">
+            <label for="weight">Вес</label>
         </div>
         <div class="form-floating my-3">
-            <input type="text" class="form-control" id="email" formControlName="gender" placeholder="">
-            <label for="email">Пол</label>
+            <input type="text" class="form-control" id="gender" formControlName="gender" placeholder="s">
+            <label for="gender">Пол</label>
         </div>
         <div class="form-floating my-3">
-            <input type="text" class="form-control" id="password" placeholder="">
-            <label for="password">Порода</label>
+            <input type="text" class="form-control" id="breed" placeholder="s">
+            <label for="breed">Порода</label>
+        </div>
+        <div class="form-floating my-3">
+            <input type="date" class="form-control" id="date-of-birth" placeholder="s">
+            <label for="date-of-birth">Дата рождения</label>
+        </div>
+        <div class="form-floating my-3">
+            <input type="number" class="form-control" id="gps-id" placeholder="s">
+            <label for="gps-id">ID GPS трекера</label>
+        </div>
+        <div class="form-floating my-3">
+            <input type="number" class="form-control" id="account-id" formControlName="chipperId" placeholder="s">
+            <label for="account-id">ID хозяина</label>
         </div>
         <button [disabled]="registerAnimalForm.invalid" type="submit"
             class="btn btn-primary mt-3 violet-bg">Зарегестрировать</button>
