--- a/animal-chipping-org/src/app/animal-registration/animal-registration.component.html
+++ b/animal-chipping-org/src/app/animal-registration/animal-registration.component.html
@@ -18,8 +18,19 @@
             <label for="floatingSelect">Пол</label>
         </div>
         <div class="form-floating my-3">
-            <input type="text" class="form-control" id="breed" placeholder="s">
-            <label for="breed">Порода</label>
+            <select class="form-select" id="floatingSelect" aria-label="asd">
+                <option value="MALE">Немецкий шпиц</option>
+                <option value="FEMALE">Чихуахуа</option>
+                <option value="OTHER">Вельш-корги</option>
+                <option value="OTHER">Немецкая овчарка</option>
+                <option value="OTHER">Йоркширский терьер</option>
+                <option value="OTHER">Лабрадор-ретривер</option>
+                <option value="OTHER">Среднеазиатская овчарка</option>
+                <option value="OTHER">Джек-рассел терьер</option>
+                <option value="OTHER">Французский бульдог</option>
+                <option value="OTHER">Пудель</option>
+            </select>
+            <label for="floatingSelect">Порода</label>
         </div>
         <div class="form-floating my-3">
             <input type="date" class="form-control" id="date-of-birth" placeholder="s">
