fix: link in the home page to the animal registration page

--- a/animal-chipping-org/src/app/home/home.component.html
+++ b/animal-chipping-org/src/app/home/home.component.html
@@ -4,7 +4,7 @@
       <h2 class="violet">Защитите своего пушистого друга - чипируйте его сегодня!</h2>
     </div>
     <div class="position-absolute end-15 bottom-0 m-5">
-      <a href="/animal-register" class="btn btn-primary btn-lg btn-block violet-bg">Чипировать</a>
+      <a href="/animal-registration" class="btn btn-primary btn-lg btn-block violet-bg">Чипировать</a>
     </div>
   </div>
 </section>
