--- a/animal-chipping-org/src/app/app.component.html
+++ b/animal-chipping-org/src/app/app.component.html
@@ -8,6 +8,9 @@
   <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
+        <a class="nav-link" href="/location-search">Поиск животного</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/registration">Авторизация</a>
       </li>
       <li class="nav-item">
