--- a/animal-chipping-org/src/app/location-search/location-search.component.html
+++ b/animal-chipping-org/src/app/location-search/location-search.component.html
@@ -1,1 +1,34 @@
-<p>location-search works!</p>
+<div class="container">
+    <h2 class="mb-5">Поиск питомца</h2>
+    <form [formGroup]="locationSearchForm" (ngSubmit)="search()">
+        <div class="row d-flex">
+            <div class="col">
+                <div class="form-floating my-3">
+                    <input type="number" class="form-control" id="animalId" formControlName="animalId" placeholder="s">
+                    <label for="firstName">ID животного</label>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-floating my-3">
+                    <input type="date" class="form-control" id="startDateTime" formControlName="startDateTime"
+                        placeholder="s">
+                    <label for="startDateTime">Искать с</label>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-floating my-3">
+                    <input type="date" class="form-control" id="endDateTime" formControlName="endDateTime"
+                        placeholder="s">
+                    <label for="endDateTime">Искать до</label>
+                </div>
+            </div>
+            <div class="col align-self-center">
+                <button [disabled]="locationSearchForm.invalid" type="submit"
+                    class="btn btn-primary violet-bg">Найти</button>
+            </div>
+        </div>
+    </form>
+    <div *ngIf="foundedLocations" class="alert alert-success mt-5" role="alert">
+
+    </div>
+</div>
