--- a/animal-chipping-org/src/app/home/home.component.html
+++ b/animal-chipping-org/src/app/home/home.component.html
@@ -1,10 +1,40 @@
-<section class="app-root bg-image d-flex flex-column justify-content-center align-items-center">
-  <div class="container d-flex flex-column justify-content-center align-items-center">
-    <div class="col-md-6 mb-5 text-center">
-      <h2 class="violet">Защитите своего пушистого друга - чипируйте его сегодня!</h2>
+<section class="app-root bg-image d-flex flex-column align-items-center">
+  <div class="container d-flex flex-column align-items-center">
+    <div class="col-md-6 text-center mt-5">
+      <h1 class="violet">Защитите своего пушистого друга - чипируйте его сегодня!</h1>
     </div>
     <div class="position-absolute end-15 bottom-0 m-5">
-      <a href="/animal-registration" class="btn btn-primary btn-lg btn-block violet-bg">Чипировать</a>
+      <a href="/animal-registration" class="btn btn-primary btn-lg btn-block violet-bg text-center px-4">ChipPetNow</a>
+    </div>
+  </div>
+</section>
+<section class="d-flex flex-column justify-content-center align-items-center mt-5">
+  <div class="container">
+    <div class="row row-cols-2">
+
+      <div class="col-6">
+        <div class=" text-center p-5 about-us mx-3 h-100 d-flex flex-column">
+          <h2 class="dark-violet mb-3">О нас</h2>
+          <p class="dark-violet my-4">
+            В ChipPetsNow мы заботимся о безопасности и защите домашних животных. Мы понимаем, что домашние животные
+            являются важной частью нашей жизни и семьи, и мы хотим сделать все возможное, чтобы они никогда не потерялись и
+            не были разлучены со своими любимцами.
+          </p>
+          <p class="dark-violet my-4">
+            Наша команда состоит из любителей животных, опытных ветеринаров и сертифицированных специалистов по чипированию,
+            которые стремятся предоставить нашим клиентам высококачественные услуги. Мы используем новейшие технологии и
+            оборудование, чтобы обеспечить быстрый и безболезненный процесс чипирования для вашего питомца.
+          </p>
+          <p class="dark-violet my-4">
+            В ChipPetsNow мы верим, что каждый питомец заслуживает безопасного и любящего дома. Чипируя своего питомца, вы
+            делаете важный шаг к его защите и гарантируете, что он всегда вернется к вам. Спасибо, что выбрали нас, чтобы
+            стать частью путешествия вашего питомца.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-6 about-us-bg">
+      </div>
     </div>
   </div>
 </section>
