--- a/animal-chipping-org/src/app/home/home.component.html
+++ b/animal-chipping-org/src/app/home/home.component.html
@@ -38,3 +38,31 @@
     </div>
   </div>
 </section>
+<section class="d-flex flex-column justify-content-center align-items-center mt-5">
+  <div class="container d-flex flex-column">
+    <h2 class="violet mb-5 text-center">Наш сервис</h2>
+    <div class="row justify-content-between">
+      <div class="col-4 d-flex flex-column flex-fill">
+        <div class="search mb-3"></div>
+        <div class="container white text-center violet-bg py-4">
+          <h4>Поиск</h4>
+          <p class="m-0">Поможем если питомец потерялся</p>
+        </div>
+      </div>
+      <div class="col-4 d-flex flex-column flex-fill">
+        <div class="gps mb-3"></div>
+        <div class="container white text-center violet-bg py-4">
+          <h4>Установка GPS трекера</h4>
+          <p class="m-0">Трекеры любой породы на выбор</p>
+        </div>
+      </div>
+      <div class="col-4 d-flex flex-column flex-fill">
+        <div class="service mb-3"></div>
+        <div class="container white text-center violet-bg py-4">
+          <h4>Обслуживание</h4>
+          <p class="m-0">Поможем с настройкой и уходом за чипом</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
