feat: update table view with using updated visited-location model

--- a/animal-chipping-org/src/app/table-location-view/table-location-view.component.html
+++ b/animal-chipping-org/src/app/table-location-view/table-location-view.component.html
@@ -11,8 +11,8 @@
         <tr *ngFor="let location of locations">
             <td>{{location.id}}</td>
             <td>{{location.dateTimeOfVisitLocationPoint}}</td>
-            <td>{{location.location.latitude}}</td>
-            <td>{{location.location.longitude}}</td>
+            <td>{{location.latitude}}</td>
+            <td>{{location.longitude}}</td>
         </tr>
     </tbody>
 </table>
